# rest_axum

./: .env  .env.example  Cargo.toml
src/: main.rs
src/application/: post_service.rs
src/domain/: error.rs  mod.rs  ports.rs  post.rs
src/infrastructure/: cached_post_repository.rs  config.rs  mod.rs  post_repository.rs
src/interfaces/http/: handlers.rs
